add special syntax to define range objects